@@ -114,6 +114,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = Auswahl aufheben
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = Klonen
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = Ausgew\u00E4hlte Objekte zusammenfassen
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = Schema kopieren
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = Alle Objekte l\u00F6schen
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = Ausgew\u00E4hlte Objekte l\u00F6schen
