@@ -116,6 +116,7 @@ com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteItemsPlugIn=Pegar ele
 com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteLayersPlugIn=Pegar capas
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn=Duplicar ventana
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn=Combinar elementos seleccionados
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn=Copiar Esquema
 com.vividsolutions.jump.workbench.ui.plugin.datastore.RefreshDataStoreLayerPlugin=Refrescar capa
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn=Borrar todos los elementos
