@@ -116,6 +116,7 @@ com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteItemsPlugIn=Liit\u00E
 com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteLayersPlugIn=Liit\u00E4 tasot
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn=Kloonaa ikkuna
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn=Yhdist\u00E4 valitut kohteet
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn=Kopioi skeema
 com.vividsolutions.jump.workbench.ui.plugin.datastore.RefreshDataStoreLayerPlugin=Lataa taso uudestaan
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn=Poista kaikki kohteet
