@@ -114,6 +114,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = Annuler la s\u00E9lection
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = Dupliquer la fen\u00EAtre
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = Combiner les objets s\u00E9lectionn\u00E9s
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = Le MultiPolygon n'est pas valide, une GeometryCollection est cr\u00E9\u00E9e
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = Copier le sch\u00E9ma
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = Supprimer tous les objets
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = Supprimer les \u00E9l\u00E9ments s\u00E9lectionn\u00E9s
