@@ -116,6 +116,7 @@ com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteItemsPlugIn=Elemek be
 com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteLayersPlugIn=R\u00E9tegek beilleszt\u00E9se
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn=Ablak kl\u00F3noz\u00E1s
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn=Kiv\u00E1lasztott elemek egyes\u00EDt\u00E9se
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn=S\u00E9ma m\u00E1sol\u00E1s
 com.vividsolutions.jump.workbench.ui.plugin.datastore.RefreshDataStoreLayerPlugin=R\u00E9teg \u00FAjrarajzol\u00E1s
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn=\u00D6sszes elem t\u00F6rl\u00E9se
