@@ -116,6 +116,7 @@ com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteItemsPlugIn=Incolla e
 com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteLayersPlugIn=Incolla livelli
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn=Duplica finestre
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn=Combina elementi
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn=Copia Schema
 com.vividsolutions.jump.workbench.ui.plugin.datastore.RefreshDataStoreLayerPlugin=Aggiorna livello
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn=Cancella tutti gli elementi
