@@ -114,6 +114,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = \u0D24\u0D3F\u0D30\u0D1E\u0D4D\u0D1E\u0D46\u0D1F\u0D41\u0D24\u0D4D\u0D24\u0D35 \u0D15\u0D33\u0D2F\u0D41\u0D15 
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = \u0D08 \u0D35\u0D3F\u0D28\u0D4D\u200D\u0D21\u0D4B \u0D2A\u0D4B\u0D32\u0D4B\u0D24\u0D46 \u0D2E\u0D31\u0D4D\u0D31\u0D4A\u0D30\u0D46\u0D23\u0D4D\u0D23\u0D02 \u0D09\u0D23\u0D4D\u0D1F\u0D3E\u0D15\u0D4D\u0D15\u0D41\u0D15 
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = \u0D2B\u0D3F\u0D1A\u0D4D\u0D1A\u0D30\u0D41\u0D15\u0D33\u0D4D\u200D \u0D12\u0D28\u0D4D\u0D28\u0D3F\u0D2A\u0D4D\u0D2A\u0D3F\u0D15\u0D4D\u0D15\u0D41\u0D15
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = \#T\:Copy Schema
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = \u0D24\u0D3F\u0D30\u0D1E\u0D4D\u0D1E\u0D46\u0D1F\u0D41\u0D24\u0D4D\u0D24 \u0D2B\u0D3F\u0D1A\u0D4D\u0D1A\u0D30\u0D41\u0D15\u0D33\u0D4D\u200D \u0D15\u0D33\u0D2F\u0D41\u0D15
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = \u0D24\u0D3F\u0D30\u0D1E\u0D4D\u0D1E\u0D46\u0D1F\u0D41\u0D24\u0D4D\u0D24 \u0D10\u0D31\u0D4D\u0D31\u0D02 \u0D15\u0D33\u0D2F\u0D41\u0D15 
