@@ -114,6 +114,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = Limpar sele\u00E7\u00E3o
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = Duplicar janela
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = Combinar caracter\u00EDsticas selecionadas
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = \#T\:Copy Schema
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = Deletar todas as caracter\u00EDsticas
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = Deletar itens selecionados
