@@ -113,7 +113,8 @@ com.vividsolutions.jump.workbench.ui.plugin.AddNewLayerPlugIn.name = \#T\:Layer
 com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = \#T\:BeanShell Console
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = \#T\:Clear Selection
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = \#T\:Clone Window
-com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = Combine Selected Features
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = \#T\:Combine Selected Features
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = \#T\:Copy Schema
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = Delete All Features
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = Delete Selected Items
