@@ -113,6 +113,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = \u6E05\u9664\u9009\u62E9
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = \u590D\u5236\u793A\u7A97
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = \u7ED3\u5408\u6240\u9009\u529F\u80FD
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = \#T\:Copy Schema
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = \u5220\u9664\u6240\u6709\u529F\u80FD
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = \u5220\u9664\u6240\u9009\u9879\u76EE
